--- a/Saturday_UE/Config/DefaultEngine.ini
+++ b/Saturday_UE/Config/DefaultEngine.ini
@@ -8,8 +8,9 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Project/Blueprints/BP_MyGameMode.BP_MyGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Project/Blueprints/BP_MyGameInstance.BP_MyGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
