warp処理改善中

--- a/Saturday_UE/Config/DefaultEngine.ini
+++ b/Saturday_UE/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Saturday_UE
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Project/Levels/MyLevel.MyLevel
+EditorStartupMap=/Game/Project/Levels/Main.Main
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 TransitionMap=
 bUseSplitscreen=True
